--- a/src/app/pages/myplan/myplan.component.html
+++ b/src/app/pages/myplan/myplan.component.html
@@ -134,6 +134,7 @@
       </div>
 
       <div class="spacer">
+        <span>{{ myPlanSpots }}</span>
         <img src="../../../assets/img/allow_down_slv.svg" alt="" />
         <!-- 最短ルート -->
         <button
