--- a/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.html
+++ b/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.html
@@ -1,29 +1,41 @@
 <mat-card id="planspot-list-item">
   <mat-card-content *ngIf="item.googleSpot === null; else isGoogle">
-    <div class='header'>
-      <div class='lt'>
-        <span class='avatar'>
+    <div class="header">
+      <div class="lt">
+        <span class="avatar">
           <a (click)="toPostUser(item)">
-            <img [src]="genUserPicture()" [alt]="genUserName()">
-            <span class="username">{{genUserName()}}</span>
+            <img [src]="genUserPicture()" [alt]="genUserName()" />
+            <span class="username">{{ genUserName() }}</span>
           </a>
         </span>
       </div>
-      <div class='rt' [ngClass]="{'fav':myFavorite}">
-        <span class='title'>
-          {{genTitle()}}
+      <div class="rt" [ngClass]="{ fav: myFavorite }">
+        <span class="title">
+          {{ genTitle() }}
         </span>
       </div>
-      <button *ngIf="myFavorite" type="button" class="delete" (click)="onClickDeleteFavorite(item)"></button>
+      <button
+        *ngIf="myFavorite"
+        type="button"
+        class="delete"
+        (click)="onClickDeleteFavorite(item)"
+      ></button>
     </div>
-    <div class='card-box'>
-      <div class='card-header'>
-        <div class='picture'>
-          <owl-carousel-o *ngIf="item.pictures && item.pictures.length > 1; else single" [options]="mainOptions">
+    <div class="card-box">
+      <div class="card-header">
+        <div class="picture">
+          <owl-carousel-o
+            *ngIf="item.pictures && item.pictures.length > 1; else single"
+            [options]="mainOptions"
+          >
             <ng-container *ngFor="let src of item.pictures; index as i">
               <ng-template carouselSlide id="row.planId">
                 <div class="thumbmain">
-                  <img [src]="src?src:noPic" [alt]="item.id" [title]="item.id" />
+                  <img
+                    [src]="src ? src : noPic"
+                    [alt]="item.id"
+                    [title]="item.id"
+                  />
                 </div>
               </ng-template>
             </ng-container>
@@ -31,16 +43,25 @@
           <ng-template #single>
             <ng-container *ngFor="let src of item.pictures; index as i">
               <div class="thumbmain fullwidth">
-                <img [src]="src?src:noPic" [alt]="item.id" [title]="item.id" />
+                <img
+                  [src]="src ? src : noPic"
+                  [alt]="item.id"
+                  [title]="item.id"
+                />
               </div>
             </ng-container>
           </ng-template>
         </div>
-        <div class='info'>
-          <div class='lt'>
-            <span class='mark'
-              [ngClass]="{'spot':!item.isPlan || item.spotQty === 1,'plan':item.isPlan && item.spotQty > 1}">
-              {{ item.isPlan && item.spotQty > 1?'Plan':'Spot'}}
+        <div class="info">
+          <div class="lt">
+            <span
+              class="mark"
+              [ngClass]="{
+                spot: !item.isPlan || item.spotQty === 1,
+                plan: item.isPlan && item.spotQty > 1
+              }"
+            >
+              {{ item.isPlan && item.spotQty > 1 ? "Plan" : "Spot" }}
             </span>
             <span class="areaName" *ngIf="item.areaName">
               {{ item.areaName | langFilter: lang }}
@@ -49,20 +70,24 @@
         </div>
       </div>
 
-      <div class='card-bottom'>
+      <div class="card-bottom" [ngClass]="{ on: chkInMyPlanspot(item) }">
         <mat-list>
           <mat-list-item class="bottom-view">
-            <div class='row'>
-              <span class='view'>
-                {{'PostedDate'|translate}}：{{item.releaseCreateDatetime | date:'yyyy/MM/dd'}}
+            <div class="row">
+              <span class="view">
+                {{ "PostedDate" | translate }}：{{
+                  item.releaseCreateDatetime | date: "yyyy/MM/dd"
+                }}
               </span>
-              <span class='view'>
-                {{'View'|translate}}：{{item.pvQtyAll}} {{ 'Man' | translate}}
+              <span class="view">
+                {{ "View" | translate }}：{{ item.pvQtyAll }}
+                {{ "Man" | translate }}
               </span>
             </div>
-            <div class='row'>
-              <span class='view'>
-                {{'InplanCount'|translate}}：{{item.planSpotQty}} {{ 'Man' | translate}}
+            <div class="row">
+              <span class="view">
+                {{ "InplanCount" | translate }}：{{ item.planSpotQty }}
+                {{ "Man" | translate }}
               </span>
               <!--<span class='view'>
                 {{'ReviewRate'|translate}}：{{item.reviewAvg}}
@@ -71,39 +96,54 @@
             <!-- <span *ngIf="!isProd">
               {{item.id}}
             </span> -->
-            <button *ngIf="!myFavorite" mat-button class="add-to-favorite" [ngClass]="{'on':item.isFavorite}"
-              (click)="onClickFavorite(item)">
-            </button>
+            <button
+              *ngIf="!myFavorite"
+              mat-button
+              class="add-to-favorite"
+              [ngClass]="{ on: item.isFavorite }"
+              (click)="onClickFavorite(item)"
+            ></button>
           </mat-list-item>
           <ng-container *ngIf="item.isPlan; else isSpot">
             <mat-list-item class="row mt02 summery">
               <span class="spots">
                 <label>{{ "NumberOfSpots" | translate }}：</label>
-                <div class='maru'>
+                <div class="maru">
                   <span>{{ item.spotQty }}</span>
                 </div>
               </span>
               <span class="timerequired">
-                <label>{{'Roundtime'|translate}}</label>
-                <span *ngIf="item.timeRequiredHour !== null">{{ item.timeRequiredHour }}{{ "Hour" | translate }}</span>
-                <span *ngIf="item.timeRequiredMin !== null">{{ item.timeRequiredMin }}{{ "Minute" | translate }}</span>
+                <label>{{ "Roundtime" | translate }}</label>
+                <span *ngIf="item.timeRequiredHour !== null"
+                  >{{ item.timeRequiredHour }}{{ "Hour" | translate }}</span
+                >
+                <span *ngIf="item.timeRequiredMin !== null"
+                  >{{ item.timeRequiredMin }}{{ "Minute" | translate }}</span
+                >
               </span>
             </mat-list-item>
-            <mat-list-item class="row psname" [innerHtml]=genPlanSpotNames(item.planSpotNames)>
+            <mat-list-item
+              class="row psname"
+              [innerHtml]="genPlanSpotNames(item.planSpotNames)"
+            >
             </mat-list-item>
           </ng-container>
 
           <ng-template #isSpot>
             <mat-list-item class="row">
-              <p>{{item.overview | langFilter:lang}}</p>
+              <p>{{ item.overview | langFilter: lang }}</p>
             </mat-list-item>
             <mat-list-item class="row">
               <span class="directions">
-                {{ genSpotAccess()}}
+                {{ genSpotAccess() }}
               </span>
             </mat-list-item>
             <mat-list-item class="row">
-              <span class="businesshour">{{ "Businesshours" | translate }}：{{ genSpotBusinessHour()}}</span>
+              <span class="businesshour"
+                >{{ "Businesshours" | translate }}：{{
+                  genSpotBusinessHour()
+                }}</span
+              >
               <span class="regularholiday">{{ genSpotHoliday() }}</span>
             </mat-list-item>
           </ng-template>
@@ -111,92 +151,119 @@
             <mat-card-content class="badge">
               <dl>
                 <dd *ngFor="let item of item.searchCategories">
-                  {{ item.name | langFilter:lang }}
+                  {{ item.name | langFilter: lang }}
                 </dd>
               </dl>
             </mat-card-content>
           </mat-list-item>
           <!-- Remoju plan プランに追加 -->
           <mat-list-item class="footer">
-            <button mat-flat-button class="link-to-detail" (click)="linktoDetail(item)">
-              {{"LinktoDetail"|translate}}
+            <button
+              mat-flat-button
+              class="link-to-detail"
+              (click)="linktoDetail(item)"
+            >
+              {{ "LinktoDetail" | translate }}
             </button>
-            <button mat-flat-button class="add-to-plan" [ngClass]="{'on':chkInMyPlanspot(item)}"
-              (click)="onClickAddToPlan(item)">
+            <button
+              mat-flat-button
+              class="add-to-plan"
+              [ngClass]="{ on: chkInMyPlanspot(item) }"
+              (click)="onClickAddToPlan(item)"
+            >
               {{ "AddToPlan" | translate }}
             </button>
           </mat-list-item>
         </mat-list>
       </div>
 
-      <div class='link-area' (click)="linktoDetail(item)"></div>
+      <div class="link-area" (click)="linktoDetail(item)"></div>
     </div>
   </mat-card-content>
   <ng-template #isGoogle>
-    <div class='header'>
-      <div class='lt'>
-        <span class='avatar'>
-          <img src="../../../../../assets/img/icon_google.svg" alt="google">
+    <div class="header">
+      <div class="lt">
+        <span class="avatar">
+          <img src="../../../../../assets/img/icon_google.svg" alt="google" />
           <span class="username">google</span>
         </span>
       </div>
-      <div class='rt' [ngClass]="{'fav':myFavorite}">
-        <span class='mark'>
-          <img [src]="genMarkPath()" alt="mark">
+      <div class="rt" [ngClass]="{ fav: myFavorite }">
+        <span class="mark">
+          <img [src]="genMarkPath()" alt="mark" />
         </span>
-        <span class='title'>
-          {{ item.googleSpot.spot_name}}
+        <span class="title">
+          {{ item.googleSpot.spot_name }}
         </span>
       </div>
-      <button *ngIf="myFavorite" type="button" class="delete" (click)="onClickDeleteFavorite(item)"></button>
+      <button
+        *ngIf="myFavorite"
+        type="button"
+        class="delete"
+        (click)="onClickDeleteFavorite(item)"
+      ></button>
     </div>
-    <div class='card-box'>
-      <div class='card-header'>
-        <div class='picture'>
+    <div class="card-box">
+      <div class="card-header">
+        <div class="picture">
           <div class="thumbmain fullwidth">
-            <ng-container *ngIf="item.googleSpot.picture_url;else noImage">
+            <ng-container *ngIf="item.googleSpot.picture_url; else noImage">
               <img [src]="item.googleSpot.picture_url" alt="" />
             </ng-container>
             <ng-template #noImage>
-              <img src="../../../../../assets/img/nopict.png" alt="noImage">
+              <img src="../../../../../assets/img/nopict.png" alt="noImage" />
             </ng-template>
           </div>
         </div>
-        <div class='info'>
-          <div class='lt'>
+        <div class="info">
+          <div class="lt">
             <span class="areaName" *ngIf="item.googleSpot.mArea?.area_name_1">
               {{ item.googleSpot.mArea.area_name_1 | langFilter: lang }}
             </span>
           </div>
         </div>
       </div>
-      <div class='card-bottom'>
+      <div class="card-bottom" [ngClass]="{ on: chkInMyPlanspot(item) }">
         <mat-list>
           <mat-list-item class="bottom-view">
             <span class="note">
-              {{ 'NotPostedRemoju' | translate }}
+              {{ "NotPostedRemoju" | translate }}
             </span>
-            <button *ngIf="!myFavorite" mat-button class="add-to-favorite" [ngClass]="{'on':item.isFavorite}"
-              (click)="onClickFavorite(item)">
-            </button>
+            <button
+              *ngIf="!myFavorite"
+              mat-button
+              class="add-to-favorite"
+              [ngClass]="{ on: item.isFavorite }"
+              (click)="onClickFavorite(item)"
+            ></button>
           </mat-list-item>
           <mat-list-item class="row mt1">
-            <span class="googleaddress">{{ item.googleSpot.formatAddress }}</span>
+            <span class="googleaddress">{{
+              item.googleSpot.formatAddress
+            }}</span>
           </mat-list-item>
           <!-- Remoju plan プランに追加 -->
           <mat-list-item class="footer">
-            <button mat-flat-button class="link-to-detail" (click)="linktoDetail(item)">
-              {{"LinktoDetail"|translate}}
+            <button
+              mat-flat-button
+              class="link-to-detail"
+              (click)="linktoDetail(item)"
+            >
+              {{ "LinktoDetail" | translate }}
             </button>
-            <button mat-flat-button class="add-to-plan" [ngClass]="{'on':chkInMyPlanspot(item)}"
-              (click)="onClickAddToPlan(item)">
+            <button
+              mat-flat-button
+              class="add-to-plan"
+              [ngClass]="{ on: chkInMyPlanspot(item) }"
+              (click)="onClickAddToPlan(item)"
+            >
               {{ "AddToPlan" | translate }}
             </button>
           </mat-list-item>
         </mat-list>
       </div>
 
-      <div class='link-area' (click)="linktoDetail(item)"></div>
+      <div class="link-area" (click)="linktoDetail(item)"></div>
     </div>
   </ng-template>
 </mat-card>
