--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -16,6 +16,8 @@ $color-gld04cf: #9a721ecf;
 $color-gld05: #bf9f60;
 $color-gld06: #b19f7b;
 
+$color-gld10: #b79b7e;
+
 $color-gry00: #f6f6f6;
 $color-gry01: #eaeaea;
 $color-gry02: #c7c4c1;
