--- a/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.scss
+++ b/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.scss
@@ -907,10 +907,10 @@
           }
         }
       }
-
-      &.on {
-        background-color: #b6d8ca50;
-      }
+    }
+    &.on {
+      //box-shadow: 0 5px 25px 0 rgb(0 0 0 / 50%);
+      box-shadow: 0px 0px 0px 4px $color-gld10;
     }
   }
 }
