location link change

--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -16,7 +16,8 @@ $color-gld04cf: #9a721ecf;
 $color-gld05: #bf9f60;
 $color-gld06: #b19f7b;
 
-$color-gld10: #b79b7e;
+// $color-gld10: #b79b7e;
+$color-gld10: #ca9f20;
 
 $color-gry00: #f6f6f6;
 $color-gry01: #eaeaea;
@@ -30,6 +31,7 @@ $color-gry07: #a8a8a8;
 $color-pnk00: #e58e90;
 $color-pnk02: #f3787e;
 $color-pnk04: #de7274;
+$color-pnk05: #cf7877;
 
 $color-grn01: #81c5b4;
 
