--- a/src/app/parts/nav-menu/nav-menu.component.html
+++ b/src/app/parts/nav-menu/nav-menu.component.html
@@ -1,75 +1,114 @@
 <!-- Navigation start -->
 <nav class="navbar" role="navigation">
-    <div class="navbar-header">
-      <a class="navbar-brand lower" (click)="onNavgate('planspot', null, true)">
-        <img src="../../../assets/img/remoju-logo-b.svg" alt="remoju-app" width="106" height="27" />
-      </a>
-    </div>
-    <div class="nav-wrap">
-      <mat-nav-list class="language">
-        <div class="switchViewLang" [ngClass]="lang==='en'?'en':''">
-          <input type="checkbox" id="switch-view3" (click)="onClickSwitchLang($event)" [checked]="lang==='en'">
-          <label for="switch-view3"><span></span></label>
-          <div id="swImg"></div>
-        </div>
-      </mat-nav-list>
+  <div class="navbar-header">
+    <a class="navbar-brand lower" (click)="onNavgate('planspot', null, true)">
+      <img
+        src="../../../assets/img/remoju-logo-b.svg"
+        alt="remoju-app"
+        width="106"
+        height="27"
+      />
+    </a>
+  </div>
+  <div class="nav-wrap">
+    <mat-nav-list class="language">
+      <div class="switchViewLang" [ngClass]="lang === 'en' ? 'en' : ''">
+        <input
+          type="checkbox"
+          id="switch-view3"
+          (click)="onClickSwitchLang($event)"
+          [checked]="lang === 'en'"
+        />
+        <label for="switch-view3"><span></span></label>
+        <div id="swImg"></div>
+      </div>
+    </mat-nav-list>
 
-      <mat-nav-list class="user">
-        <span *ngIf="!commonService.loggedIn">
-          <a mat-list-item (click)="commonService.login()">{{ "PleaseLogin" | translate }}</a>
+    <mat-nav-list class="user">
+      <span *ngIf="!commonService.loggedIn">
+        <a mat-list-item (click)="commonService.login()">{{
+          "PleaseLogin" | translate
+        }}</a>
+      </span>
+      <div class="logout" *ngIf="commonService.loggedIn">
+        <span>
+          {{ "Welcome" | translate }}
+          {{ userName }}
+          {{ "San" | translate }}
         </span>
-        <div class="logout" *ngIf="commonService.loggedIn">
-          <span>
-            {{ "Welcome" | translate }}
-            {{ userName }}
-            {{ "San" | translate }}
-          </span>
-          <span>
-            <a mat-list-item (click)="commonService.logout()">{{ "Logout" | translate }}</a>
-          </span>
-        </div>
-      </mat-nav-list>
+        <span>
+          <a mat-list-item (click)="commonService.logout()">{{
+            "Logout" | translate
+          }}</a>
+        </span>
+      </div>
+    </mat-nav-list>
 
-      <mat-nav-list class="status">
-      </mat-nav-list>
+    <mat-nav-list class="status"> </mat-nav-list>
 
-      <mat-nav-list>
-        <div class="header">{{ "MakeATripPlan" | translate }}</div>
-        <mat-nav-list class="sub">
-          <!-- <a mat-list-item (click)="onNavgate('spots')">{{ "SearchBySpot" | translate }}</a>
+    <mat-nav-list>
+      <div class="header">{{ "MakeATripPlan" | translate }}</div>
+      <mat-nav-list class="sub">
+        <!-- <a mat-list-item (click)="onNavgate('spots')">{{ "SearchBySpot" | translate }}</a>
           <a mat-list-item (click)="onNavgate('plans')">{{ "SearchByModelPlan" | translate }}</a> -->
-          <a mat-list-item (click)="onNavgate('planspot')">{{ "FindEveryoneRecommendations" | translate }}</a>
-          <a mat-list-item (click)="onNavgate('mypage','favorite')">{{ "SearchByFavorite" | translate }}</a>
-
-        </mat-nav-list>
+        <a mat-list-item (click)="onNavgate('planspot')">{{
+          "FindEveryoneRecommendations" | translate
+        }}</a>
+        <a mat-list-item (click)="onNavgate('mypage', 'favorite')">{{
+          "SearchByFavorite" | translate
+        }}</a>
       </mat-nav-list>
-      <mat-nav-list>
-        <div class="header">{{ "ViewFeaturedArticles" | translate }}</div>
-        <mat-nav-list class="sub">
-          <a mat-list-item (click)="onNavgateFeature('area/kyoto/jyoshitabi.html')">{{ "RecommendedTripForGirls" | translate }}</a>
-          <a mat-list-item (click)="onNavgateFeature('area/kyoto_guidemap.html')">{{ "LetsGoToKyotoNow" | translate }}</a>
-          <a mat-list-item href="">{{ "ExcitingTripForKids" | translate }}</a>
-          <a mat-list-item href="">{{ "SeeOther" | translate }}</a>
-        </mat-nav-list>
+    </mat-nav-list>
+    <mat-nav-list>
+      <div class="header">{{ "ViewFeaturedArticles" | translate }}</div>
+      <mat-nav-list class="sub">
+        <a
+          mat-list-item
+          (click)="onNavgateFeature('area/kyoto/jyoshitabi.html')"
+          >{{ "RecommendedTripForGirls" | translate }}</a
+        >
+        <a
+          mat-list-item
+          (click)="onNavgateFeature('area/kyoto_guidemap.html')"
+          >{{ "LetsGoToKyotoNow" | translate }}</a
+        >
+        <!-- <a mat-list-item href="">{{ "ExcitingTripForKids" | translate }}</a>
+          <a mat-list-item href="">{{ "SeeOther" | translate }}</a> -->
       </mat-nav-list>
-      <mat-nav-list *ngIf="commonService.loggedIn">
-        <div class="header">{{ "ViewMyPage" | translate }}</div>
-        <mat-nav-list class="sub">
-          <a mat-list-item (click)="onNavgate('mypage','list')">{{ "ViewSavedPlans" | translate }}</a>
-          <a mat-list-item  (click)="onNavgate('mypage','favorite')">{{ "ViewFavorite" | translate }}</a>
-          <a mat-list-item  (click)="onNavgate('mypage','review')">{{ "ViewReview" | translate }}</a>
-          <a mat-list-item (click)="onNavgate('mypage','profile')">{{ "EditProfile" | translate }}</a>
-        </mat-nav-list>
-
+    </mat-nav-list>
+    <mat-nav-list *ngIf="commonService.loggedIn">
+      <div class="header">{{ "ViewMyPage" | translate }}</div>
+      <mat-nav-list class="sub">
+        <a mat-list-item (click)="onNavgate('mypage', 'list')">{{
+          "ViewSavedPlans" | translate
+        }}</a>
+        <a mat-list-item (click)="onNavgate('mypage', 'favorite')">{{
+          "ViewFavorite" | translate
+        }}</a>
+        <a mat-list-item (click)="onNavgate('mypage', 'review')">{{
+          "ViewReview" | translate
+        }}</a>
+        <a mat-list-item (click)="onNavgate('mypage', 'profile')">{{
+          "EditProfile" | translate
+        }}</a>
       </mat-nav-list>
-      <mat-nav-list>
-        <div class='header'>{{ 'Other' | translate }}</div>
-        <mat-nav-list class="sub">
-          <a mat-list-item (click)="onNavgate('offcial/about')">{{ "About" | translate }}</a>
-          <a mat-list-item  (click)="onNavgate('offcial/guide')">{{ "Guide" | translate }}</a>
-          <a mat-list-item  (click)="onNavgate('offcial/privacy')">{{ "Policy" | translate }}</a>
-          <a mat-list-item  (click)="onNavgate('offcial/contact')">{{ "Contact" | translate }}</a>
-        </mat-nav-list>
+    </mat-nav-list>
+    <mat-nav-list>
+      <div class="header">{{ "Other" | translate }}</div>
+      <mat-nav-list class="sub">
+        <a mat-list-item (click)="onNavgate('offcial/about')">{{
+          "About" | translate
+        }}</a>
+        <a mat-list-item (click)="onNavgate('offcial/guide')">{{
+          "Guide" | translate
+        }}</a>
+        <a mat-list-item (click)="onNavgate('offcial/privacy')">{{
+          "Policy" | translate
+        }}</a>
+        <a mat-list-item (click)="onNavgate('offcial/contact')">{{
+          "Contact" | translate
+        }}</a>
       </mat-nav-list>
-    </div>
-  </nav>
+    </mat-nav-list>
+  </div>
+</nav>
