upd1219 about/guide

--- a/src/app/pages/offcial/guide/guide.component.html
+++ b/src/app/pages/offcial/guide/guide.component.html
@@ -1,5 +1,40 @@
 <mat-card>
   <mat-card-content>
     <h1>guide</h1>
+    <ul>
+      <li><span>Point1</span>みんなのおすすめを参考に行きたい場所を探す</li>
+      <li><span>Point2</span>プラン箱を開いて、自分だけの旅プランを作る</li>
+      <li><span>Point3</span>写真やコメントを追加して旅のしおりを編集</li>
+      <li><span>Point4</span>みんなにシェアして楽しむ</li>
+    </ul>
+
+    <ul>
+      <li>
+        <span>Step1</span>みんなのおすすめからいきたい場所を探そう
+        <ul>
+          <li>
+            おすすめのスポットや検索で、行ってみたい場所をプランBOXに入れてみよう
+          </li>
+        </ul>
+      </li>
+      <li>
+        <span>Step2</span>「行ってみたい！」が詰まったプランをつくろう
+        <ul>
+          <li>
+            プランBOXを開けば、ルートを自動作成! おでかけの計画がカンタンに。
+          </li>
+          <li>移動手段や所用時間も自動で計算</li>
+        </ul>
+      </li>
+      <li>
+        <span>Step3</span>魅力的な旅をしおりをみんなにシェア
+        <ul>
+          <li>
+            プラン名やスポット名をタップすると、自分の写真屋コメントを編集でいるよ。旅のしおりを完成させて、自分の旅の魅力を伝えてみよう！
+          </li>
+        </ul>
+      </li>
+      <li><span>Step4</span>つくったプランはマイページに保存</li>
+    </ul>
   </mat-card-content>
 </mat-card>
