--- a/src/app/pages/offcial/about/about.component.html
+++ b/src/app/pages/offcial/about/about.component.html
@@ -1,5 +1,20 @@
 <mat-card>
   <mat-card-content>
     <h1>about</h1>
+    <ul>
+      <li><span class="title">会社名</span>Remoju株式会社</li>
+      <li><span class="title">設立</span>2019年8月</li>
+      <li><span class="title">所在地</span>東京都港区芝浦４－１９－１</li>
+      <li><span class="title">資本金</span>5,000万円</li>
+      <li><span class="title">法人番号</span>0104-01-147809</li>
+      <li><span class="title">役員</span>代表取締役　中井稔哉</li>
+      <li><span class="title">スタッフ数</span>6名</li>
+      <li>
+        <span class="title">目的</span
+        ><br />Webアプリケーション等の企画開発運営、インターネットを活用した情報提供、
+        　　　　　マーケティング、旅行業、宿泊施設運営等
+      </li>
+      <li><span class="title">特許</span>第5871082号</li>
+    </ul>
   </mat-card-content>
 </mat-card>
