--- a/src/app/pages/offcial/about/about.component.scss
+++ b/src/app/pages/offcial/about/about.component.scss
@@ -1,4 +1,20 @@
-h1{
+h1 {
   text-align: center;
   font-size: 24px;
+}
+
+ul {
+  list-style: none;
+  padding: 20px;
+  border-bottom: 1px solid #ccc;
+  li {
+    line-height: 2;
+    border-top: 1px solid #ccc;
+    padding: 1em 0;
+    span.title {
+      display: inline-block;
+      width: 86px;
+      font-weight: 800;
+    }
+  }
 }
