upd1219 about/guide

--- a/src/app/pages/offcial/guide/guide.component.html
+++ b/src/app/pages/offcial/guide/guide.component.html
@@ -30,7 +30,7 @@
         <span>Step3</span>魅力的な旅をしおりをみんなにシェア
         <ul>
           <li>
-            プラン名やスポット名をタップすると、自分の写真屋コメントを編集でいるよ。旅のしおりを完成させて、自分の旅の魅力を伝えてみよう！
+            プラン名やスポット名をタップすると、自分の写真屋コメントを編集できるよ。旅のしおりを完成させて、自分の旅の魅力を伝えてみよう！
           </li>
         </ul>
       </li>
