--- a/src/app/pages/offcial/guide/guide.component.html
+++ b/src/app/pages/offcial/guide/guide.component.html
@@ -3,7 +3,7 @@
     <h1>guide</h1>
     <ul>
       <li><span>Point1</span>みんなのおすすめを参考に行きたい場所を探す</li>
-      <li><span>Point2</span>プラン箱を開いて、自分だけの旅プランを作る</li>
+      <li><span>Point2</span>プランBOXを開いて、自分だけの旅プランを作る</li>
       <li><span>Point3</span>写真やコメントを追加して旅のしおりを編集</li>
       <li><span>Point4</span>みんなにシェアして楽しむ</li>
     </ul>
