--- a/src/app/pages/offcial/about/about.component.html
+++ b/src/app/pages/offcial/about/about.component.html
@@ -11,8 +11,7 @@
       <li><span class="title">スタッフ数</span>6名</li>
       <li>
         <span class="title">目的</span
-        ><br />Webアプリケーション等の企画開発運営、インターネットを活用した情報提供、
-        　　　　　マーケティング、旅行業、宿泊施設運営等
+        ><br />Webアプリケーション等の企画開発運営、インターネットを活用した情報提供、マーケティング、旅行業、宿泊施設運営等
       </li>
       <li><span class="title">特許</span>第5871082号</li>
     </ul>
