--- a/src/app/pages/offcial/guide/guide.component.html
+++ b/src/app/pages/offcial/guide/guide.component.html
@@ -1,40 +1,51 @@
 <mat-card>
   <mat-card-content>
     <h1>guide</h1>
-    <ul>
+    <!-- <ul>
       <li><span>Point1</span>みんなのおすすめを参考に行きたい場所を探す</li>
       <li><span>Point2</span>プランBOXを開いて、自分だけの旅プランを作る</li>
       <li><span>Point3</span>写真やコメントを追加して旅のしおりを編集</li>
       <li><span>Point4</span>みんなにシェアして楽しむ</li>
-    </ul>
+    </ul> -->
 
     <ul>
       <li>
-        <span>Step1</span>みんなのおすすめからいきたい場所を探そう
+        <span>Step1</span>行きたい場所を見つけて
         <ul>
           <li>
-            おすすめのスポットや検索で、行ってみたい場所をプランBOXに入れてみよう
+            みんなのおすすめプランやスポットを見たり、行きたい場所を検索して、
+            行ってみたい場所をプランBOXに入れてみよう
           </li>
         </ul>
       </li>
       <li>
-        <span>Step2</span>「行ってみたい！」が詰まったプランをつくろう
+        <span>Step2</span>おでかけのプランを作り
         <ul>
+          <li>プランBOXを開けば、おでかけの計画がカンタンに作れちゃう</li>
           <li>
-            プランBOXを開けば、ルートを自動作成! おでかけの計画がカンタンに。
+            移動手段や所用時間も、自宅からホテルまでスポットを最短で周るルートも自動計算してくれる
           </li>
-          <li>移動手段や所用時間も自動で計算</li>
         </ul>
       </li>
       <li>
-        <span>Step3</span>魅力的な旅をしおりをみんなにシェア
+        <span>Step3</span>写真やメモをUpして、
         <ul>
+          <li>つくったプランはマイページに保存</li>
           <li>
-            プラン名やスポット名をタップすると、自分の写真屋コメントを編集できるよ。旅のしおりを完成させて、自分の旅の魅力を伝えてみよう！
+            後から編集したりイメージにぴったりな写真やコメントもUpして、素敵な休日のしおりが完成
+          </li>
+          <li>
+            おでかけした後に編集すれば、楽しかった時間が思い出として詰まったアルバムにもなる
           </li>
         </ul>
       </li>
-      <li><span>Step4</span>つくったプランはマイページに保存</li>
+      <li><span>Step4</span>みんなにもシェアしよう！</li>
+      <ul>
+        <li>魅力的な休日プランは、みんなにもシェア</li>
+        <li>
+          URLを知っている人にだけ共有したり、みんなに公開したり、みんなにも魅力的な休日プランを発信しよう！
+        </li>
+      </ul>
     </ul>
   </mat-card-content>
 </mat-card>
