--- a/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.html
+++ b/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.html
@@ -31,7 +31,7 @@
           type="radio"
           value="all"
           (change)="onSwitchPlanSpot($event)"
-          [checked]="condition.select === 'all'"
+          [checked]="condition?.select === 'all'"
         />
         <label for="all" class="all" value="all">All</label>
         <input
@@ -40,7 +40,7 @@
           type="radio"
           value="plan"
           (change)="onSwitchPlanSpot($event)"
-          [checked]="condition.select === 'plan'"
+          [checked]="condition?.select === 'plan'"
         />
         <label for="plan" class="plan">Plan</label>
         <input
@@ -49,7 +49,7 @@
           type="radio"
           value="spot"
           (change)="onSwitchPlanSpot($event)"
-          [checked]="condition.select === 'spot'"
+          [checked]="condition?.select === 'spot'"
         />
         <label for="spot" class="spot" value="spot">Spot</label>
         <ng-container *ngIf="!myFavorite">
@@ -59,7 +59,7 @@
             type="radio"
             value="google"
             (change)="onSwitchPlanSpot($event)"
-            [checked]="condition.select === 'google'"
+            [checked]="condition?.select === 'google'"
           />
           <label for="google" class="google"></label>
         </ng-container>
