--- a/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.html
+++ b/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.html
@@ -31,7 +31,9 @@
           type="radio"
           value="all"
           (change)="onSwitchPlanSpot($event)"
-          [checked]="condition.select ? condition.select === 'all' : false"
+          [checked]="
+            condition.select !== null ? condition.select === 'all' : false
+          "
         />
         <label for="all" class="all" value="all">All</label>
         <input
