--- a/src/app/pages/offcial/guide/guide.component.html
+++ b/src/app/pages/offcial/guide/guide.component.html
@@ -10,16 +10,22 @@
 
     <ul>
       <li>
-        <span>Step1</span>行きたい場所を見つけて
-        <ul>
-          <li>
-            みんなのおすすめプランやスポットを見たり、行きたい場所を検索して、
-            行ってみたい場所をプランBOXに入れてみよう
-          </li>
-        </ul>
+        <span>Step1</span>
+        <h2>行きたい場所を見つけて</h2>
+        <div class="caption">
+          みんなのおすすめプランやスポットを見たり、行きたい場所を検索して、
+          行ってみたい場所をプランBOXに入れてみよう
+        </div>
+        <video
+          autoplay
+          loop
+          width="260"
+          src="../../../../assets/images/RPReplay_Final1673242634_1.mp4"
+        ></video>
       </li>
       <li>
-        <span>Step2</span>おでかけのプランを作り
+        <span>Step2</span>
+        <h2>おでかけのプランを作り</h2>
         <ul>
           <li>プランBOXを開けば、おでかけの計画がカンタンに作れちゃう</li>
           <li>
@@ -28,7 +34,8 @@
         </ul>
       </li>
       <li>
-        <span>Step3</span>写真やメモをUpして、
+        <span>Step3</span>
+        <h2>写真やメモをUpして、</h2>
         <ul>
           <li>つくったプランはマイページに保存</li>
           <li>
@@ -39,13 +46,16 @@
           </li>
         </ul>
       </li>
-      <li><span>Step4</span>みんなにもシェアしよう！</li>
-      <ul>
-        <li>魅力的な休日プランは、みんなにもシェア</li>
-        <li>
-          URLを知っている人にだけ共有したり、みんなに公開したり、みんなにも魅力的な休日プランを発信しよう！
-        </li>
-      </ul>
+      <li>
+        <span>Step4</span>
+        <h2>みんなにもシェアしよう！</h2>
+        <ul>
+          <li>魅力的な休日プランは、みんなにもシェア</li>
+          <li>
+            URLを知っている人にだけ共有したり、みんなに公開したり、みんなにも魅力的な休日プランを発信しよう！
+          </li>
+        </ul>
+      </li>
     </ul>
   </mat-card-content>
 </mat-card>
