upd0109 all video in

--- a/src/app/pages/offcial/guide/guide.component.html
+++ b/src/app/pages/offcial/guide/guide.component.html
@@ -19,8 +19,10 @@
         <video
           autoplay
           loop
+          muted
+          playsinline
           width="260"
-          src="../../../../assets/images/RPReplay_Final1673242634_1.mp4"
+          src="../../../../assets/images/RPReplay_1.mp4"
         ></video>
       </li>
       <li>
@@ -32,6 +34,14 @@
             移動手段や所用時間も、自宅からホテルまでスポットを最短で周るルートも自動計算してくれる
           </li>
         </ul>
+        <video
+          autoplay
+          loop
+          muted
+          playsinline
+          width="260"
+          src="../../../../assets/images/RPReplay_2.mp4"
+        ></video>
       </li>
       <li>
         <span>Step3</span>
@@ -45,6 +55,14 @@
             おでかけした後に編集すれば、楽しかった時間が思い出として詰まったアルバムにもなる
           </li>
         </ul>
+        <video
+          autoplay
+          loop
+          muted
+          playsinline
+          width="260"
+          src="../../../../assets/images/RPReplay_3.mp4"
+        ></video>
       </li>
       <li>
         <span>Step4</span>
@@ -55,6 +73,14 @@
             URLを知っている人にだけ共有したり、みんなに公開したり、みんなにも魅力的な休日プランを発信しよう！
           </li>
         </ul>
+        <video
+          autoplay
+          loop
+          muted
+          playsinline
+          width="260"
+          src="../../../../assets/images/RPReplay_4.mp4"
+        ></video>
       </li>
     </ul>
   </mat-card-content>
