--- a/src/app/pages/spot-detail/spot-detail.component.html
+++ b/src/app/pages/spot-detail/spot-detail.component.html
@@ -1,33 +1,42 @@
-<div class="spotdtl" (swiperight)="onSwipeRight($event,data.spotId)">
-  <mat-card id="spotdtlheader" [ngClass]="{'onplan':myPlanSpots?.includes($spotId)}">
-    <div class='link' (click)="linktolist()">
-      <span class="frame">{{"BackEveryoneRecommendations" | translate}}</span>
+<div class="spotdtl" (swiperight)="onSwipeRight($event, data.spotId)">
+  <mat-card
+    id="spotdtlheader"
+    [ngClass]="{ onplan: myPlanSpots?.includes($spotId) }"
+  >
+    <div class="link" (click)="linktolist()">
+      <span class="frame">{{ "BackEveryoneRecommendations" | translate }}</span>
     </div>
     <mat-card-content>
-      <div class='header'>
-        <div class='lt'>
-          <span class='avatar'>
+      <div class="header">
+        <div class="lt">
+          <span class="avatar">
             <img src="{{ $userStaff?.pictureUrl }}" alt="" />
-            <span class="username">{{$userStaff?.romanLetterName|langFilter:lang}}</span>
+            <span class="username">{{
+              $userStaff?.romanLetterName | langFilter : lang
+            }}</span>
           </span>
         </div>
-        <div class='rt'>
-          <div class='name'>
+        <div class="rt">
+          <div class="name">
             <!-- <span class='mark'>
               <img src="../../../assets/img/mark_spot.svg" alt="mark">
             </span> -->
-            <span class='title'>
-              {{ data.spotName | langFilter: lang }}
+            <span class="title">
+              {{ data.spotName | langFilter : lang }}
             </span>
           </div>
-          <div class='buttons'>
+          <div class="buttons">
             <!-- <button mat-button  (click)="onClickThanks()" [ngStyle]="{'color' : ($isThanks ? 'red' : 'gray')}">
               <i class="material-icons">thumb_up</i>
             </button> -->
             <!-- <button mat-button class="add-to-favorite" [ngClass]="{'on':data.isFavorite}" (click)="onClickFavorite()">
             </button> -->
-            <button mat-icon-button class="plan_add" (click)="onClickAddToPlan()">
-              <img src="{{addplanbtn_src}}" alt="add to plan">
+            <button
+              mat-icon-button
+              class="plan_add"
+              (click)="onClickAddToPlan()"
+            >
+              <img src="{{ addplanbtn_src }}" alt="add to plan" />
             </button>
           </div>
         </div>
@@ -35,14 +44,21 @@
     </mat-card-content>
   </mat-card>
 
-  <div class='container' #cont>
+  <div class="container" #cont>
     <mat-card id="mainPictures">
       <mat-card-content class="mt10">
-        <owl-carousel-o *ngIf="isMulti; else singlePict" [options]="mainOptions">
+        <owl-carousel-o
+          *ngIf="isMulti; else singlePict"
+          [options]="mainOptions"
+        >
           <ng-container *ngFor="let item of mainPictures; index as i">
             <ng-template carouselSlide id="item.spot_id">
               <div class="thumb">
-                <img [src]="item.picture_url" [alt]="item.spot_id" [title]="item.spot_id" />
+                <img
+                  [src]="item.picture_url"
+                  [alt]="item.spot_id"
+                  [title]="item.spot_id"
+                />
               </div>
             </ng-template>
           </ng-container>
@@ -50,26 +66,30 @@
 
         <ng-template #singlePict>
           <div class="thumb">
-            <img [src]="mainPicturesSingle?.picture_url" [alt]="mainPicturesSingle?.spot_id"
-              [title]="mainPicturesSingle?.spot_id" />
+            <img
+              [src]="mainPicturesSingle?.picture_url"
+              [alt]="mainPicturesSingle?.spot_id"
+              [title]="mainPicturesSingle?.spot_id"
+            />
           </div>
         </ng-template>
       </mat-card-content>
-      <div class='info'>
-        <div class='lt'>
-          <span class='mark spot'>
-            Spot
-          </span>
+      <div class="info">
+        <div class="lt">
+          <span class="mark spot"> Spot </span>
           <span class="areaName" *ngIf="data.areaName1">
-            {{ data.areaName1 | langFilter: lang }}
+            {{ data.areaName1 | langFilter : lang }}
           </span>
           <span class="category" *ngIf="data.areaName2">
-            {{ data.areaName2 | langFilter: lang }}
+            {{ data.areaName2 | langFilter : lang }}
           </span>
         </div>
-        <div class='rt'>
+        <div class="rt">
           <div class="view">
-            <span>{{'View'|translate}}{{ data.pvQty }}{{ 'Man' | translate}}</span>
+            <span
+              >{{ "View" | translate }}{{ data.pvQty
+              }}{{ "Man" | translate }}</span
+            >
           </div>
         </div>
       </div>
@@ -87,10 +107,13 @@
               {{data.pvQty?.toLocaleString()}}&nbsp;View
             </span>
           </mat-list-item> -->
-          <span class='divider'></span>
-          <mat-list-item class="row pt8" *ngIf="($nearest | langFilter: lang) !== ''">
-            <span class="{{ $access}}">
-              {{ $nearest | langFilter: lang }}
+          <span class="divider"></span>
+          <mat-list-item
+            class="row pt8"
+            *ngIf="($nearest | langFilter : lang) !== ''"
+          >
+            <span class="{{ $access }}">
+              {{ $nearest | langFilter : lang }}
             </span>
           </mat-list-item>
           <mat-list-item class="row">
@@ -118,37 +141,56 @@
             <span>{{ reviewQty }}</span>{{ "Count" | translate }}
           </a>
         </div>-->
-        <div class='favorite'>
-          <button mat-button class="add-to-favorite" [ngClass]="{'on':data.isThanks}" (click)="onClickThanks()">
-          </button>
-            {{ "Thanks" | translate }}
+        <div class="favorite">
+          <button
+            mat-button
+            class="add-to-favorite"
+            [ngClass]="{ on: data.isThanks }"
+            (click)="onClickThanks()"
+          ></button>
+          {{ "Thanks" | translate }}
           <span>{{ data.thanksQty }}</span>
         </div>
-        <div class='bookmark'>
-          <button mat-button class="add-to-bookmark" [ngClass]="{'on':data.isFavorite}" (click)="onClickFavorite()">
-          </button>
-            {{ "Favorite" | translate }}
+        <div class="bookmark">
+          <button
+            mat-button
+            class="add-to-bookmark"
+            [ngClass]="{ on: data.isFavorite }"
+            (click)="onClickFavorite()"
+          ></button>
+          {{ "Favorite" | translate }}
         </div>
       </mat-card-content>
     </mat-card>
 
     <mat-card id="content">
       <mat-card-content>
-        <div class='avatar'>
+        <div class="avatar">
           <img src="{{ $userStaff?.pictureUrl }}" alt="" />
         </div>
-        <p [innerHTML]="data.spotOverview | langFilter: lang | replaceNewline"></p>
+        <p
+          [innerHTML]="data.spotOverview | langFilter : lang | replaceNewline"
+        ></p>
       </mat-card-content>
     </mat-card>
 
     <mat-card>
       <mat-card-content>
         <ng-container *ngFor="let item of spotPictures; index as i">
-          <h4 class="subheading mt28" [innerHTML]="item.subheading | langFilter: lang | replaceNewline"></h4>
+          <h4
+            class="subheading mt28"
+            [innerHTML]="item.subheading | langFilter : lang | replaceNewline"
+          ></h4>
           <div class="thumbmain">
-            <img [src]="item.picture_url" [alt]="item.spot_id" [title]="item.spot_id" />
+            <img
+              [src]="item.picture_url"
+              [alt]="item.spot_id"
+              [title]="item.spot_id"
+            />
           </div>
-          <p [innerHTML]="item.comment | langFilter: lang | replaceNewline"></p>
+          <p
+            [innerHTML]="item.comment | langFilter : lang | replaceNewline"
+          ></p>
         </ng-container>
       </mat-card-content>
     </mat-card>
@@ -165,21 +207,23 @@
           <tbody>
             <tr>
               <td class="title" translate>SpotName</td>
-              <td style="word-break: break-all;">
-                {{ data.spotName | langFilter: lang }}
+              <td style="word-break: break-all">
+                {{ data.spotName | langFilter : lang }}
               </td>
             </tr>
             <tr>
               <td class="title" translate>Address</td>
               <td>
-                <span class="addr">{{ data.address | langFilter: lang }}</span>
-                <a class="map" href="{{$mapUrl}}" target="_blank"></a>
+                <span class="addr">{{ data.address | langFilter : lang }}</span>
+                <a class="map" href="{{ $mapUrl }}" target="_blank"></a>
               </td>
             </tr>
             <tr>
               <td class="title" translate>TEL</td>
               <td>
-                <a href="tel:{{ data.tel | langFilter }}">{{ data.tel | langFilter: lang }}</a>
+                <a href="tel:{{ data.tel | langFilter }}">{{
+                  data.tel | langFilter : lang
+                }}</a>
               </td>
             </tr>
             <tr>
@@ -189,12 +233,12 @@
             <tr>
               <td class="title" translate>Holiday</td>
               <td>
-                {{ $regularHoliday }}</td>
+                {{ $regularHoliday }}
+              </td>
             </tr>
             <tr>
               <td class="title" translate>URL</td>
-              <td style="word-break: break-all;" [innerHTML]="$hpUrl">
-              </td>
+              <td style="word-break: break-all" [innerHTML]="$hpUrl"></td>
             </tr>
             <tr>
               <td class="title" translate>Note</td>
@@ -213,17 +257,27 @@
             <tr>
               <td class="title" translate>Areas</td>
               <td class="line">
-                <span class="feature" *ngIf="$areaName1"
-                  (click)="onClickArea(true)">{{ $areaName1 | langFilter:lang }}</span>
-                <span class="feature" *ngIf="$areaName2"
-                  (click)="onClickArea(false)">{{ $areaName2 | langFilter:lang }}</span>
+                <span
+                  class="feature"
+                  *ngIf="$areaName1"
+                  (click)="onClickArea(true)"
+                  >{{ $areaName1 | langFilter : lang }}</span
+                >
+                <span
+                  class="feature"
+                  *ngIf="$areaName2"
+                  (click)="onClickArea(false)"
+                  >{{ $areaName2 | langFilter : lang }}</span
+                >
               </td>
             </tr>
             <tr>
               <td class="title" translate>Options</td>
               <td class="line">
                 <ng-container *ngFor="let item of $searchCategories">
-                  <span class="feature" (click)="onClickCategory(item)">{{ item.name | langFilter:lang }}</span>
+                  <span class="feature" (click)="onClickCategory(item)">{{
+                    item.name | langFilter : lang
+                  }}</span>
                 </ng-container>
               </td>
             </tr>
@@ -241,9 +295,7 @@
           {{ "NearbySpots" | translate }}
         </h4>
         <!-- <img class="mark" src="../../../assets/img/mark_spot.svg" alt="mark"> -->
-        <span class='mark spot'>
-          Spot
-        </span>
+        <span class="mark spot"> Spot </span>
       </mat-card-header>
       <mat-divider class="rj-linecolor"></mat-divider>
       <mat-card-content class="mt16">
@@ -255,7 +307,7 @@
                   <img [src]="item.pictureUrl" alt="" />
                 </div>
                 <div class="content">
-                  <p>{{ item.name | langFilter: lang }}</p>
+                  <p>{{ item.name | langFilter : lang }}</p>
                 </div>
               </a>
             </ng-template>
@@ -270,9 +322,7 @@
           {{ "RecommendedPlanwithSpot" | translate }}
         </h4>
         <!-- <img class="mark" src="../../../assets/img/mark_plan.svg" alt="mark"> -->
-        <span class='mark plan'>
-          Plan
-        </span>
+        <span class="mark plan"> Plan </span>
       </mat-card-header>
       <mat-divider class="rj-linecolor"></mat-divider>
       <mat-card-content class="mt16">
@@ -294,6 +344,14 @@
       </mat-card-content>
     </mat-card>
 
+    <!-- A8テスト -->
+    <mat-card id="A8">
+      <script
+        type="text/javascript"
+        src="//rot8.a8.net/jsa/38b464a3857e947cc8a7d78d48239462/c6f057b86584942e415435ffb1fa93d4.js"
+      ></script>
+    </mat-card>
+
     <mat-card id="writer" *ngIf="$userStaff">
       <mat-card-header>
         <h4 class="header">
@@ -306,9 +364,7 @@
         <div class="card-box">
           <div class="card-header">
             <div class="cover">
-              <div class="wrap">
-
-              </div>
+              <div class="wrap"></div>
             </div>
             <div class="user">
               <div class="wrap">
@@ -318,24 +374,25 @@
           </div>
           <div class="card-info">
             <div class="username">
-              {{$userStaff?.romanLetterName|langFilter:lang}}
+              {{ $userStaff?.romanLetterName | langFilter : lang }}
             </div>
             <div class="gender">
               <span class="country"></span>
               <span>{{ "Age" | translate }}</span>
               <span>/{{ "Female" | translate }}</span>
               <span>/{{ "Male" | translate }}</span>
-
             </div>
             <div class="about">
-              <p>{{ $userStaff?.introduction | langFilter: lang }}</p>
+              <p>{{ $userStaff?.introduction | langFilter : lang }}</p>
             </div>
           </div>
         </div>
       </mat-card-content>
 
-      <div class='buttons'>
-        <button mat-button disableRipple matBadge="4" matBadgeSize="small">{{ 'ViewUserPost' | translate }}</button>
+      <div class="buttons">
+        <button mat-button disableRipple matBadge="4" matBadgeSize="small">
+          {{ "ViewUserPost" | translate }}
+        </button>
       </div>
     </mat-card>
     <!-- <app-userprofile-panel [detail]="true"></app-userprofile-panel> -->
