--- a/src/app/pages/plan-detail/plan-detail.component.html
+++ b/src/app/pages/plan-detail/plan-detail.component.html
@@ -414,10 +414,7 @@
 
     <!-- A8テスト -->
     <div class="box">
-      <script
-        type="text/javascript"
-        src="//rot8.a8.net/jsa/38b464a3857e947cc8a7d78d48239462/c6f057b86584942e415435ffb1fa93d4.js"
-      ></script>
+      <div id="script"></div>
     </div>
     <!-- コメント投稿 phase1では廃止 -->
     <!--<app-comment-list-post-panel *ngIf="reviewResult" [reviewResult]="reviewResult" [type]="$isRemojuPlan ? 2 : 3"
