--- a/src/app/pages/spot-detail/spot-detail.component.html
+++ b/src/app/pages/spot-detail/spot-detail.component.html
@@ -346,10 +346,7 @@
 
     <!-- A8テスト -->
     <mat-card id="A8">
-      <script
-        type="text/javascript"
-        src="//rot8.a8.net/jsa/38b464a3857e947cc8a7d78d48239462/c6f057b86584942e415435ffb1fa93d4.js"
-      ></script>
+      <div id="script"></div>
     </mat-card>
 
     <mat-card id="writer" *ngIf="$userStaff">
