--- a/src/app/layout/root/root.component.html
+++ b/src/app/layout/root/root.component.html
@@ -1,29 +1,69 @@
-<ng-container *ngIf="isMobile;else isPC">
-  <mat-sidenav-container autosize>
-    <mat-sidenav #sidenav mode="over" [(opened)]="opened" [fixedInViewport]="true">
-      <app-nav-menu [currentlang]="currentLang" (sideClose)="onSideNavClose()"></app-nav-menu>
-      <img src="../../../assets/img/nav-close.svg" alt="" class="navclose" (click)="onhandleSiteNav(true)" />
+<ng-container *ngIf="isMobile; else isPC">
+  <mat-sidenav-container autosize (scroll)="onWindowScroll($event)">
+    <mat-sidenav
+      #sidenav
+      mode="over"
+      [(opened)]="opened"
+      [fixedInViewport]="true"
+    >
+      <app-nav-menu
+        [currentlang]="currentLang"
+        (sideClose)="onSideNavClose()"
+      ></app-nav-menu>
+      <img
+        src="../../../assets/img/nav-close.svg"
+        alt=""
+        class="navclose"
+        (click)="onhandleSiteNav(true)"
+      />
     </mat-sidenav>
-    <mat-sidenav #cart position="end" mode="over" [(opened)]="cartopened" [fixedInViewport]="true" class="cartnav">
-      <button mat-button class="close-my-plan" (click)="onhandleCartNav(true)">
-        <img src="{{backbtn_src}}" alt="close my plan" />
+    <mat-sidenav
+      #cart
+      position="end"
+      mode="side"
+      [(opened)]="cartopened"
+      [fixedInViewport]="true"
+      class="cartnav"
+    >
+      <button mat-button class="close-my-plan" (click)="onhandleCartNav()">
+        <img src="{{ backbtn_src }}" alt="close my plan" />
       </button>
-      <app-myplan [isMobile]="isMobile" [userPic]="userPic" [useName]="userName"></app-myplan>
+      <app-myplan
+        [isMobile]="isMobile"
+        [userPic]="userPic"
+        [useName]="userName"
+        (cartevent)="onhandleCartNav()"
+      ></app-myplan>
     </mat-sidenav>
     <mat-sidenav-content>
       <div class="body">
-        <app-header (event)="onhandleSiteNav($event)" [sidenav_closed]="!sidenav.opened"
-          (cartevent)="onhandleCartNav($event)" [cartnav_closed]="!cart.opened"></app-header>
-        <div class="wrapper" [ngClass]="{'off':!expandHeader,'on':expandHeader}">
+        <app-header
+          (event)="onhandleSiteNav($event)"
+          [sidenav_closed]="!sidenav.opened"
+          [cartnav_closed]="!cart.opened"
+        ></app-header>
+        <div
+          class="wrapper"
+          [ngClass]="{ off: !expandHeader, on: expandHeader }"
+        >
           <div class="outletArea">
             <router-outlet class="outletWidth"></router-outlet>
-            <button [ngClass]="{ 'show-scroll': showScroll,'up': jumpFooter }" (click)="scrollToTop()"
-              class="scroll-to-top">
-              <img src="{{toTop_src}}" alt="toTop" />
+            <button
+              [ngClass]="{ 'show-scroll': showScroll, up: jumpFooter }"
+              (click)="scrollToTop()"
+              class="scroll-to-top"
+            >
+              <img src="{{ toTop_src }}" alt="toTop" />
             </button>
-            <button mat-button matBadge="{{spots}}" (click)="togglecart()" class="view-my-plan"
-              [ngClass]="{'on':spots > 0,'up':jumpFooter}" disableRipple="true">
-              <img src="{{viewbtn_src}}" alt="view my plan" />
+            <button
+              mat-button
+              matBadge="{{ spots }}"
+              (click)="onhandleCartNav()"
+              class="view-my-plan"
+              [ngClass]="{ on: spots > 0, up: jumpFooter }"
+              disableRipple="true"
+            >
+              <img src="{{ viewbtn_src }}" alt="view my plan" />
             </button>
           </div>
         </div>
@@ -34,18 +74,38 @@
 </ng-container>
 <ng-template #isPC>
   <mat-sidenav-container autosize>
-    <mat-sidenav #sidenav mode="over" [(opened)]="opened" [fixedInViewport]="true">
-      <app-nav-menu [currentlang]="currentLang" (sideClose)="onSideNavClose()"></app-nav-menu>
-      <img src="../../../assets/img/nav-close.svg" alt="" class="navclose" (click)="onhandleSiteNav(true)" />
+    <mat-sidenav
+      #sidenav
+      mode="over"
+      [(opened)]="opened"
+      [fixedInViewport]="true"
+    >
+      <app-nav-menu
+        [currentlang]="currentLang"
+        (sideClose)="onSideNavClose()"
+      ></app-nav-menu>
+      <img
+        src="../../../assets/img/nav-close.svg"
+        alt=""
+        class="navclose"
+        (click)="onhandleSiteNav(true)"
+      />
     </mat-sidenav>
     <mat-sidenav-content>
-      <app-header (event)="onhandleSiteNav($event)" [sidenav_closed]="!sidenav.opened"></app-header>
-      <div id='pc'>
-        <div class='left'>
-          <app-myplan [isMobile]="isMobile" [userPic]="userPic" [useName]="userName"></app-myplan>
+      <app-header
+        (event)="onhandleSiteNav($event)"
+        [sidenav_closed]="!sidenav.opened"
+      ></app-header>
+      <div id="pc">
+        <div class="left">
+          <app-myplan
+            [isMobile]="isMobile"
+            [userPic]="userPic"
+            [useName]="userName"
+          ></app-myplan>
         </div>
-        <div class='right'>
-          <div class='menu'></div>
+        <div class="right">
+          <div class="menu"></div>
           <router-outlet class="outletWidth"></router-outlet>
         </div>
       </div>
@@ -53,4 +113,3 @@
     </mat-sidenav-content>
   </mat-sidenav-container>
 </ng-template>
-
