--- a/src/app/layout/root/root.component.scss
+++ b/src/app/layout/root/root.component.scss
@@ -182,7 +182,7 @@ mat-sidenav-content {
 
 .mat-sidenav.cartnav {
   width: 100%;
-  height: calc(100vh);
+  //height: calc(100vh);
   //margin-top: 45px;
 
   button.close-my-plan {
